# evo

./: .env.example  .gitignore  AGENTS.md  README.md  auto.py  main.py  memory_processor.py  pyproject.toml  requirements.txt  test.py  test2.py
.cursor/rules/: agent.mdc  ai_ml_best_practices.mdc  api_contract.mdc  cicd.mdc  clean_architecture.mdc  code_style.mdc  configuration.mdc  databases.mdc  ddd.mdc  delete_tests.mdc  dip.mdc  examples.mdc  formatting.mdc  general.mdc  isp.mdc  lsp.mdc  no_magic.mdc  ocp.mdc  openai_agents_documentation.mdc  prompts.mdc  run.mdc  srp.mdc  stack.mdc  testing.mdc  windows.mdc
ai_agents/: __init__.py  coding.py  main.py  memory.py
config/: __init__.py  session_manager.py  settings.py
instructions/: coding.jinja2  main.jinja2  memory.jinja2  shared_memory.jinja2
tools/: __init__.py  local_shell_executor.py  memory_tool.py  shell_tool.py  sql_tool.py
